apply plugin: 'java'
apply plugin: 'application'

group 'hlib.mykhailenko'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.8


mainClassName = "hlib.mykhailenko.dashboard.rest.App"


repositories {
    mavenCentral()
}

dependencies {
//    Logging daahh
    compile 'log4j:log4j:1.2.17'

//    JUNIT
    testCompile 'junit:junit:4.12'

//    Jetty web app server
    compile 'org.eclipse.jetty:jetty-server:9.2.3.v20140905'
    compile 'org.eclipse.jetty:jetty-servlet:9.2.3.v20140905'

//    Jersey REST server
    compile 'org.glassfish.jersey.containers:jersey-container-servlet-core:2.7'

//    Jackson JSON mapper
    compile 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.6.1'

//    Reflection lib
    compile 'org.reflections:reflections:0.9.11'

//    GitHub Java API
    compile 'org.kohsuke:github-api:1.93'


}
